--- a/notebooks/hello-csharp/hello-world.ipynb
+++ b/notebooks/hello-csharp/hello-world.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first line declares a variable, `aFriend` and assigns it a value, \"Bill\". The second line rints out the name.\n",
+    "The first line declares a variable, `aFriend` and assigns it a value, \"Bill\". The second line prints out the name.\n",
     "\n",
     "You can assign different values to any variable you declare. You can change the name to one of your friends. Add these two lines in the above cell after the code you've already added:\n",
     "\n",
@@ -70,7 +70,7 @@
     "\n",
     "```csharp\n",
     "Console.WriteLine(\"Hello \" + aFriend);\n",
-    "```\n",
+    "```\n",po
     "\n",
     "You've been using `+` to build strings from **variables** and **constant** strings. There's a better way. You can place a variable between `{` and `}` characters to tell C# to replace that text with the value of the variable. This is called *String interpolation*.\n",
     "\n",
