--- a/notebooks/hello-csharp/hello-world.ipynb
+++ b/notebooks/hello-csharp/hello-world.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first line declares a variable, `aFriend` and assigns it a value, \"Bill\". The second line rints out the name.\n",
+    "The first line declares a variable, `aFriend` and assigns it a value, \"Bill\". The second line prints out the name.\n",
     "\n",
     "You can assign different values to any variable you declare. You can change the name to one of your friends. Add these two lines in the above cell after the code you've already added:\n",
     "\n",
